# ec_downsampling_analysis

./: .flake8  .gitignore  README.md  install.sh  mypy.ini  pyproject.toml  python_install.sh  upload_data.sh
analysis/: constants.py  create_jobscripts.py  downsampling_plot.py  feature_downsampling_plot.py
data/: diabetes130.json
job_scripts/: submit_downsample_mimic.sh  submit_downsample_mimic_reduced.sh  submit_downsample_uti_reduced copy.sh  submit_evaluate_slow.sh  submit_evaluate_slow1.sh  submit_evaluate_slow2.sh  submit_evaluate_uti.sh  submit_evaluate_uti_svm.sh  submit_tune_slow.sh
results/: hps.tar
scripts/: baseline_fast.py  downsample.py  downsample_fast.py  downsample_mimic.py  downsample_slow.py  downsample_slow_mimic.py  downsample_slow_mimic_reduced copy.py  downsample_slow_uti.py  downsample_slow_uti_reduced.py  downsample_slow_uti_reduced_array.py  downsample_slow_uti_svm.py  downsample_uti_svm_debug.py  downsample_very_fast.py  generate_plots.py  tune.py  tune_fast.py
src/: analysis.py  classifiers.py  constants.py  downsampling.py  enumerables.py  feature_downsampling_plot.py  loading.py  metrics.py  prediction.py  tune.py  utils.py
src/classifiers/: classifier.py  gbt.py  logistic.py  nystroem.py  rf.py  svm.py
src/hparams/: forest.py  gbt.py  hparams.py  logistic.py  nystroem.py  rf.py  svm.py
src/legacy/: downsampling_setup.py  feature_downsampling.py
tests/: test_analysis_hypertune.py  test_consistency.py  test_dataloading.py  test_datasets.py
written/methods/: Makefile  build.py  build_citations.sh  mdstyle.html  methods.bib  (+2 more)
