[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
skip_gitignore = false
line_length = 120
atomic = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'LOCALFOLDER', 'FIRSTPARTY']
known_local_folder = ['test', 'analysis']

[tool.poetry]
name = "ec_downsampling_analyses"
version = "0.0.0"
description = "compare error consistency and model performance with feature and sample subsetting"
authors = ["Derek M Berger <dberger@stfx.ca>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.21.2"
pandas = "^1.3.3"
sklearn = "^0.0"
error-consistency = "^0.3.1"
statsmodels = "^0.13.0"
tqdm = "^4.62.3"
pytest = "^6.2.5"
seaborn = "^0.11.2"
matplotlib = "^3.4.3"
typing-extensions = "^3.10.0"
ray = {extras = ["tune"], version = "^1.7.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
